[gd_scene load_steps=3 format=3 uid="uid://chsaojpo5smy3"]

[ext_resource type="Script" uid="uid://diecuetjjqdh1" path="res://menu.gd" id="1_uubjt"]
[ext_resource type="Texture2D" uid="uid://d7w28og7uh6p" path="res://icon.svg" id="2_5yleq"]

[node name="Main" type="Node2D"]
script = ExtResource("1_uubjt")

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0

[node name="Host butt" type="Button" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 428.0
offset_top = 46.0
offset_right = 670.0
offset_bottom = 196.0
grow_horizontal = 2
text = "HOST"

[node name="Join butt" type="Button" parent="."]
offset_left = 418.0
offset_top = 296.0
offset_right = 690.0
offset_bottom = 456.0
text = "Join"

[node name="LobbyID" type="LineEdit" parent="."]
offset_left = 820.0
offset_top = 529.0
offset_right = 1073.0
offset_bottom = 588.0

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(1087, 64)
texture = ExtResource("2_5yleq")

[node name="exist" type="Button" parent="."]
offset_left = 821.0
offset_top = 192.0
offset_right = 974.0
offset_bottom = 291.0
text = "Exist"

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
spawn_path = NodePath("..")

[connection signal="pressed" from="Host butt" to="." method="_on_host_butt_pressed"]
[connection signal="pressed" from="Join butt" to="." method="_on_join_butt_pressed"]
[connection signal="text_changed" from="LobbyID" to="." method="_on_lobby_id_text_changed"]
[connection signal="pressed" from="exist" to="." method="_on_exist_pressed"]
